# blurgather

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build-msgpack.cmake  locate-sweetgreen.cmake  run_tests.sh
include/blurgather/: array_repository.h  context.h  crypted_string.h  cryptor.h  decryptor.h  encryption.h  encryptor.h  iv.h  map.h  mcrypt_cryptor.h  mcrypt_iv.h  msgpack_persister.h  password.h  password_factory.h  password_iterator.h  password_msgpack_persister.h  password_repository.h  password_to_map.h  persister.h  repository.h  secret_key.h  stream.h  string.h  types.h  urandom_iv.h  utilities.h
include/kiki/: kiClass.h  utilities.h
include/kiki/pwd_mng/: MCryptIV.h  iv.h  kiDecryptor.h  kiEncryptor.h  kiMCryptEncryptor.h  kiPassword.h  kiPasswordFactory.h  kiPasswordIterator.h  kiPasswordMCryptEncryptor.h  kiPasswordMsgPackPersister.h  kiPasswordRepository.h  secret_key.h
src/: CMakeLists.txt  MCryptIV.c  array_repository.c  context.c  crypted_string.c  cryptor.c  encryption.c  iv.c  kiMCryptEncryptor.c  kiPassword.c  kiPasswordFactory.c  kiPasswordMCryptEncryptor.c  kiPasswordMsgPackPersister.c  map.c  mcrypt_cryptor.c  mcrypt_iv.c  module.c  msgpack_persister.c  msgpack_serialize.c  msgpack_serialize.h  password.c  password_factory.c  password_msgpack_persister.c  password_to_map.c  persister.c  repository.c  secret_key.c  stream.c  string.c  urandom_iv.c  utilities.c
src/cli-frontend/: .#blur.c  CMakeLists.txt  ask_secret_key.c  blur.c  blur.h  clipboard.h  cmd.h  create_context.c  find_string_index.c  get_secret_key.c  getfield.c  gtk3_clipboard.c  kipwdmng.c  null_clipboard.c  pasteboard.m  run_command.c  run_options.c  stdout_clipboard.c  utils.h  xclipboard.c
src/cli-frontend/cmd/: add.c  get.c  info.c  list.c  remove.c
src/cli-frontend/options/: persistence_filepath.c  unlock_from_stdin.c  value_to_stdout.c
test/: CMakeLists.txt  array_repository_test.c  blur_test.py  dummy_iv.h  encryption_test.c  file_stream_test.c  integration_test.c  kiMCryptEncryptorTest.cc  kiPasswordMCryptEncryptorTest.cc  kiPasswordMsgPackPersisterTest.cc  kiPasswordTest.cc  map_test.c  master_passwd.stdin  mcrypt_cryptor_test.c  mcrypt_cryptor_test.cc  mem_stream_test.c  mocks.c  mocks.h  msgpack_persister_test.c  password_msgpack_persister_integration_test.c  password_msgpack_persister_test.c  password_msgpack_persister_test.cc  password_test.c  password_test.cc  string_test.c
